--- a/RIDERCONNECT_APP/RiderConnect/css/RiderConnectStyle.css
+++ b/RIDERCONNECT_APP/RiderConnect/css/RiderConnectStyle.css
@@ -36,6 +36,13 @@
     font-size: 14px;
     padding:15px;
     text-align: center;
+    position:fixed;
+    bottom:0;
+    height:50px;
+    width: 100%;
+    margin: 0;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
 }
 
 .clsDivContent
@@ -45,6 +52,7 @@
     color: #ffffff;
     padding:15px;
     text-align: center;
+    padding-bottom: 50px;
 }
 
 .navbar {
